--- a/css/style.css
+++ b/css/style.css
@@ -213,70 +213,29 @@ h6 {
   text-decoration: none;
 }
 
-.sidenav .drop-down ul {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: calc(100% - 30px);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  padding: 10px 0;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: ease all 0.3s;
-}
-
-.sidenav .drop-down:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.sidenav .drop-down li {
-  min-width: 180px;
-  position: relative;
-}
-
-.sidenav .drop-down ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: none;
-  color: #065e77;
-}
-
-.sidenav .drop-down ul a:hover,
-.sidenav .drop-down ul .active > a,
-.sidenav .drop-down ul li:hover > a {
-  color: #1bb1dc;
-}
 
 .sidenav .drop-down > a:after {
-  content: "\f107";
+  content: "\f078";
   font-family: FontAwesome;
-  padding-left: 10px;
+  padding-left: 1px;
+  position: absolute;
 }
 
-.sidenav .drop-down .drop-down ul {
-  top: 0;
-  left: calc(100% - 30px);
+.sidenav .active.drop-down > a:after {
+  content: "\f077";
 }
 
-.sidenav .drop-down .drop-down:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-}
-
-.sidenav .drop-down .drop-down > a {
+.sidenav .drop-down > a {
   padding-right: 35px;
 }
 
-.sidenav .drop-down .drop-down > a:after {
-  content: "\f105";
-  position: absolute;
-  right: 15px;
+.sidenav .drop-down ul {
+  display: none;
+  overflow: hidden;
+}
+
+.sidenav .drop-down li {
+
 }
 
 /* Mobile Navigation */
@@ -549,7 +508,6 @@ h6 {
   #crossonbigscreen{
     display: none; 
   }
-
 }
 
 #threedash{
@@ -745,5 +703,12 @@ background: linear-gradient(to right, #92FE9D, #00C9FF); /* W3C, IE 10+/ Edge, F
   position: relative;
   transition: 0.8s;
 }
+
+
+
+
+
+
+
 
 
